# unit-routes-database

./: .example.env  .gitignore  README.md  a.py  account_roles.json  manage.py  pyproject.toml  report_types.json  statistics_report_types.json
accounts/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_accountcookies_updated_at_accounttokens_updated_at.py  0002_alter_accountcookies_encrypted_cookies.py  0002_alter_accountcookies_options_and_more.py  0002_remove_account_roles_account_role_delete_accountrole.py  0003_officemanagersessioncredentials_and_more.py
accounts/services/: account_cookies.py  accounts.py  crypt.py
accounts/views/: __init__.py  account_cookies.py  account_tokens.py  accounts.py
core/: admin.py  exceptions.py  mixins.py  serializers.py  services.py  views.py
dodo_is_auth/: auth.py  http_client.py  models.py  office_manager.py  parsers.py
dodo_is_auth/tests/: test_dodo_is_auth_service.py  test_http_client.py  test_office_manager_service.py
goretsky_integration/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
reports/: admin.py  apps.py  models.py  selectors.py  services.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_reportroute_unique_together.py  0002_initial.py  0003_alter_reportroute_options_alter_reporttype_options_and_more.py  0003_inventorystocks.py  0004_delete_inventorystocks.py  0004_rename_name_reporttype_alias.py  0005_rename_verbose_name_reporttype_name.py  0006_reporttype_priority.py  (+2 more)
snapshots/: admin.py  models.py
src/: app.py  config.py  exceptions.py  main.py
telegram/: admin.py  apps.py  models.py  selectors.py  services.py  urls.py  views.py
tests/: test_report_routes_grouper.py
units/: admin.py  apps.py  forms.py  models.py  selectors.py  urls.py  views.py
user_roles/: admin.py  apps.py  models.py  selectors.py  services.py  urls.py  views.py
write_offs/: admin.py  apps.py  models.py  services.py  urls.py  views.py
(+156 files in other folders)
