[tool.poetry]
name = "goretsky-integration-database"
version = "1.0.0"
description = ""
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
django-import-export = "^3.1.0"
sentry-sdk = "^1.19.1"
cryptography = "^44.0.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
httpx = "^0.28.1"
bs4 = "^0.0.2"
lxml = "^5.3.0"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
django-silk = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
