[project]
name = "unit-routes-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "cryptography>=45.0.3",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-environ>=0.12.0",
    "django-import-export>=4.3.7",
    "djangorestframework>=3.16.0",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "humanize>=4.14.0",
    "lxml>=5.4.0",
    "pika>=1.3.2",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.12.3",
    "pytelegrambotapi>=4.29.1",
    "redis>=6.2.0",
    "sentry-sdk[django]>=2.29.1",
]
